--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
         :root {
             --font-main: 'Merriweather', 'Times New Roman', serif;
             --color-text: #2b2b2b;
-            --color-link: var(--color-text);
+            --color-link: #2b2b2b;
             --line-height: 1.5;
         }
 
@@ -19,7 +19,7 @@
 
         .contact-info a {
             color: var(--color-link);
-            text-decoration: none;
+            text-decoration: underline;
             margin: 0 4px;
         }
 
