--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume - Aryan Panwar</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <style>
         /* Replicating the LaTeX/Computer Modern Resume Style - CORRECTED */
         @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap');
@@ -14,6 +15,8 @@
             --color-link: #2b2b2b;
             --line-height: 1.5;
         }
+        
+
 
         * {
             box-sizing: border-box;
