Update LinkedIn URL to correct profile

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <a href="https://github.com/Aryanpanwar10005" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="GitHub">
                         <i data-lucide="github"></i>
                     </a>
-                    <a href="https://linkedin.com/in/aryan-panwar" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="LinkedIn">
+                    <a href="https://www.linkedin.com/in/aryan-panwar-b5322b269/" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="LinkedIn">
                         <i data-lucide="linkedin"></i>
                     </a>
                     <a href="mailto:aryanpanwar10005@gmail.com" class="social-link" aria-label="Email">
@@ -374,7 +374,7 @@
                         <i data-lucide="mail"></i>
                         <span>Email Me</span>
                     </a>
-                    <a href="https://linkedin.com/in/aryan-panwar" target="_blank" rel="noopener noreferrer" class="contact-card">
+                    <a href="https://www.linkedin.com/in/aryan-panwar-b5322b269/" target="_blank" rel="noopener noreferrer" class="contact-card">
                         <i data-lucide="linkedin"></i>
                         <span>LinkedIn</span>
                     </a>
@@ -400,7 +400,7 @@
                 <a href="https://github.com/Aryanpanwar10005" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
                     <i data-lucide="github"></i>
                 </a>
-                <a href="https://linkedin.com/in/aryan-panwar" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+                <a href="https://www.linkedin.com/in/aryan-panwar-b5322b269/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
                     <i data-lucide="linkedin"></i>
                 </a>
                 <a href="mailto:aryanpanwar10005@gmail.com" aria-label="Email">
