Update Technical Arsenal: Added AI/ML Tools, refined Protocols (removed SPI), added GitHub Actions, and new Currently Exploring category.

--- a/index.html
+++ b/index.html
@@ -471,6 +471,16 @@
           </div>
 
           <div class="skill-category">
+            <h3>AI / ML Tools</h3>
+            <ul class="skill-list">
+              <li>Piper TTS</li>
+              <li>Whisper STT</li>
+              <li>LLM APIs</li>
+              <li>On-Device AI</li>
+            </ul>
+          </div>
+
+          <div class="skill-category">
             <h3>Microcontrollers</h3>
             <ul class="skill-list">
                         <li>Arduino (ATmega328)</li>
@@ -482,7 +492,7 @@
             <h3>Protocols</h3>
             <ul class="skill-list">
               <li>UART / USART</li>
-              <li>I2C / SPI</li>
+              <li>I2C</li>
               <li>HART Protocol</li>
             </ul>
           </div>
@@ -503,6 +513,7 @@
                         <li>Arduino IDE</li>
                         <li>PlatformIO</li>
                         <li>LabVIEW</li>
+                        <li>GitHub Actions</li>
             </ul>
           </div>
 
@@ -523,6 +534,16 @@
               <li>Calibration Procedures</li>
               <li>SIS Standards</li>
               <li>Field Configuration</li>
+            </ul>
+          </div>
+
+          <div class="skill-category">
+            <h3>Currently Exploring</h3>
+            <ul class="skill-list">
+              <li>Agentic AI</li>
+              <li>LLM Systems</li>
+              <li>Data Analysis</li>
+              <li>Edge AI</li>
             </ul>
           </div>
         </div>
