--- a/index.html
+++ b/index.html
@@ -293,36 +293,42 @@
       <div class="container">
         <div class="section-header fade-in">
           <span class="section-number">03.</span>
-          <h2 class="section-title">Some Things I've Built</h2>
+          <h2 class="section-title">Things I've Shipped & Built</h2>
         </div>
 
-        <div class="projects-grid fade-in">
-                <!-- Project 0: FitWardrobe -->
-                <div class="project-card">
+        <!-- Row 1: Featured Products -->
+        <div class="projects-row fade-in">
+            <span class="row-label">Featured Products</span>
+            <div class="featured-projects-grid">
+                <!-- FitWardrobe -->
+                <div class="project-card featured">
                     <div class="project-header">
                         <i data-lucide="folder" class="folder-icon"></i>
                         <div class="project-links">
+                            <span class="live-badge">LIVE</span>
                             <a href="https://fitwardrobe.me" target="_blank" rel="noopener noreferrer" aria-label="Live Site">
                                 <i data-lucide="external-link"></i>
                             </a>
                         </div>
                     </div>
-                    <h3 class="project-title">FitWardrobe — Privacy-First AI Stylist App</h3>
-                    <p style="color: var(--accent-secondary); font-family: var(--font-heading); font-size: 0.85rem; margin-bottom: 8px;">Founder & Product Lead</p>
+                    <div class="role-badge">Founder & Product Lead</div>
+                    <h3 class="project-title">FitWardrobe — AI Personal Stylist App</h3>
                     <p class="project-desc">
-                        Conceived and launched a production Android app with on-device AI outfit suggestions and a local-first privacy architecture — wardrobe photos and personal data never leave the user's device. Managing full product lifecycle including APK distribution, community growth on Telegram and Instagram, and roadmap planning. Google Play and App Store release coming soon.
+                        Privacy-first Android app that uses on-device AI to analyse your wardrobe and suggest outfits based on occasion. Clothing photos and personal data stay entirely on your device — nothing is uploaded to external servers. Built with Google Gemini Vision for clothing analysis, IndexedDB for local storage, and Capacitor for native Android packaging. Currently in beta with a Play Store release planned.
                     </p>
                     <ul class="project-tech-list">
-                        <li>AI</li>
+                        <li>React</li>
+                        <li>TypeScript</li>
+                        <li>Capacitor</li>
+                        <li>Google Gemini API</li>
+                        <li>IndexedDB</li>
                         <li>Android</li>
-                        <li>Local-First</li>
-                        <li>Privacy</li>
-                        <li>Product</li>
+                        <li>PWA</li>
                     </ul>
                 </div>
 
-                <!-- Project 0.5: Mithivoices -->
-                <div class="project-card">
+                <!-- Mithivoices -->
+                <div class="project-card featured">
                     <div class="project-header">
                         <i data-lucide="folder" class="folder-icon"></i>
                         <div class="project-links">
@@ -331,111 +337,96 @@
                             </a>
                         </div>
                     </div>
+                    <div class="role-badge">Creator & Maintainer</div>
                     <h3 class="project-title">Mithivoices — Open-Source AI Voice Platform</h3>
-                    <p style="color: var(--accent-secondary); font-family: var(--font-heading); font-size: 0.85rem; margin-bottom: 8px;">Creator & Maintainer</p>
                     <p class="project-desc">
-                        Built and maintain an open-source Text-to-Speech and Speech-to-Text platform with 19 neural voices across 8 languages including Hindi, English, German, Spanish, and Malayalam. Released v0.2.0 with multi-LLM support and modular architecture. Managing CI/CD pipeline via GitHub Actions and an active open-source contributor community.
+                        Open-source platform for Text-to-Speech and Speech-to-Text supporting 19 neural voices across 8 languages including Hindi, English, German, Spanish, and Malayalam. Built with Piper TTS for neural voice synthesis and OpenAI Whisper for transcription, served through a Python FastAPI backend and a React TypeScript frontend. Released v0.2.0 with multi-LLM support and modular architecture.
                     </p>
                     <ul class="project-tech-list">
                         <li>Python</li>
                         <li>FastAPI</li>
                         <li>React</li>
+                        <li>TypeScript</li>
                         <li>Piper TTS</li>
                         <li>Whisper STT</li>
                         <li>Open Source</li>
                     </ul>
                 </div>
-
-                <!-- Project 1 -->
-          <div class="project-card">
-            <div class="project-header">
-              <i data-lucide="folder" class="folder-icon"></i>
-              <div class="project-links">
-                <a
-                  href="https://github.com/Aryanpanwar10005"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  aria-label="GitHub Link"
-                >
-                  <i data-lucide="github"></i>
-                </a>
-                <a href="#" aria-label="External Link">
-                  <i data-lucide="external-link"></i>
-                </a>
-              </div>
             </div>
-            <h3 class="project-title">Wireless EV Charging System</h3>
-            <p class="project-desc">
-              Arduino-based automated inductive charging station with vehicle
-              detection, safety interlocks, and real-time monitoring. Features
-              95% accurate positioning using IR sensor array and emergency
-              shutdown protocols.
-            </p>
-            <ul class="project-tech-list">
-              <li>Arduino</li>
-              <li>C++</li>
-              <li>IPT Technology</li>
-              <li>IoT</li>
-            </ul>
-          </div>
+        </div>
 
-          <!-- Project 2 -->
-          <div class="project-card">
-            <div class="project-header">
-              <i data-lucide="folder" class="folder-icon"></i>
-              <div class="project-links">
-                <a
-                  href="https://github.com/Aryanpanwar10005"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  aria-label="GitHub Link"
-                >
-                  <i data-lucide="github"></i>
-                </a>
-              </div>
-            </div>
-            <h3 class="project-title">Smart Staircase Lighting</h3>
-            <p class="project-desc">
-              Motion-activated lighting control system with intelligent
-              detection logic for energy efficiency. Achieved 45% energy
-              reduction through smart automation and sequential LED control.
-            </p>
-            <ul class="project-tech-list">
-              <li>Arduino</li>
-              <li>Home Automation</li>
-              <li>IR Sensors</li>
-              <li>C++</li>
-            </ul>
-          </div>
+        <!-- Row 2: Hardware Projects -->
+        <div class="projects-row fade-in">
+            <span class="row-label">Hardware Projects</span>
+            <div class="hardware-projects-grid">
+                <!-- Wireless EV Charging -->
+                <div class="project-card hardware">
+                    <div class="project-header">
+                        <i data-lucide="folder" class="folder-icon"></i>
+                        <div class="project-links">
+                            <a href="https://github.com/Aryanpanwar10005/wireless_ev_charging" target="_blank" rel="noopener noreferrer" aria-label="GitHub Link">
+                                <i data-lucide="github"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <h3 class="project-title">Wireless EV Charging System</h3>
+                    <p class="project-desc">
+                        Arduino-based prototype for wireless electric vehicle charging using Inductive Power Transfer (IPT). The system automatically detects vehicle positioning using an IR sensor array with 95% accuracy and manages the full charging sequence — from detection to relay control — with emergency shutdown capability. Achieved 85% power transfer efficiency through resonant circuit tuning.
+                    </p>
+                    <ul class="project-tech-list">
+                        <li>Arduino</li>
+                        <li>Embedded C++</li>
+                        <li>IPT</li>
+                        <li>IR Sensors</li>
+                        <li>IoT</li>
+                    </ul>
+                </div>
 
-          <!-- Project 3 -->
-          <div class="project-card">
-            <div class="project-header">
-              <i data-lucide="folder" class="folder-icon"></i>
-              <div class="project-links">
-                <a
-                  href="https://github.com/Aryanpanwar10005"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  aria-label="GitHub Link"
-                >
-                  <i data-lucide="github"></i>
-                </a>
-              </div>
+                <!-- Smart Staircase Lighting -->
+                <div class="project-card hardware">
+                    <div class="project-header">
+                        <i data-lucide="folder" class="folder-icon"></i>
+                        <div class="project-links">
+                            <a href="https://github.com/Aryanpanwar10005/smart_staircase_lighting_system" target="_blank" rel="noopener noreferrer" aria-label="GitHub Link">
+                                <i data-lucide="github"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <h3 class="project-title">Smart Staircase Lighting System</h3>
+                    <p class="project-desc">
+                        Motion-activated staircase lighting system using IR sensors and Arduino. Lights activate sequentially when motion is detected and shut off automatically after a configurable timeout — no manual switching needed. Uses non-blocking millis() timing logic to avoid delays. Achieved 45% energy reduction compared to always-on lighting.
+                    </p>
+                    <ul class="project-tech-list">
+                        <li>Arduino</li>
+                        <li>Embedded C++</li>
+                        <li>IR Sensors</li>
+                        <li>Automation</li>
+                    </ul>
+                </div>
+
+                <!-- Autonomous Robot -->
+                <div class="project-card hardware">
+                    <div class="project-header">
+                        <i data-lucide="folder" class="folder-icon"></i>
+                        <div class="project-links">
+                            <a href="https://github.com/Aryanpanwar10005" target="_blank" rel="noopener noreferrer" aria-label="GitHub Link">
+                                <i data-lucide="github"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <h3 class="project-title">Edge-Avoiding Autonomous Robot</h3>
+                    <p class="project-desc">
+                        Autonomous navigation robot using an ultrasonic sensor array and Arduino motor control. The firmware continuously reads sensor data, applies averaging and calibration filters to improve edge detection accuracy by 40%, and uses threshold-based decision logic to avoid obstacles and edges in real time.
+                    </p>
+                    <ul class="project-tech-list">
+                        <li>Arduino</li>
+                        <li>Embedded C</li>
+                        <li>HC-SR04</li>
+                        <li>Robotics</li>
+                        <li>PWM</li>
+                    </ul>
+                </div>
             </div>
-            <h3 class="project-title">Autonomous Robot</h3>
-            <p class="project-desc">
-              Edge-avoiding navigation system with ultrasonic sensor array and
-              real-time obstacle avoidance logic. Features threshold-based
-              decision making and precise motor control (PWM).
-            </p>
-            <ul class="project-tech-list">
-              <li>Embedded C</li>
-              <li>Arduino</li>
-              <li>HC-SR04</li>
-              <li>Robotics</li>
-            </ul>
-          </div>
         </div>
 
         <div class="project-cta fade-in">
