Optimize portfolio: structural cleanup, SEO enhancements, custom 404, and image compression (WebP)

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       property="og:description"
       content="Final-year ECE student, product builder, and AI explorer. Built FitWardrobe (live Android AI app) and Mithivoices (open-source AI voice platform)."
     />
+    <meta property="og:image" content="https://aryanpanwar.in/Aryan_Panwar.webp" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta
@@ -34,8 +35,13 @@
       name="twitter:description"
       content="Final-year ECE student, product builder, and AI explorer. Built FitWardrobe (live Android AI app) and Mithivoices (open-source AI voice platform)."
     />
+    <meta property="twitter:image" content="https://aryanpanwar.in/Aryan_Panwar.webp" />
 
     <title>Aryan Panwar - ECE Engineer | Product Builder | AI Explorer</title>
+
+    <!-- Google Fonts Preconnect -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest"></script>
@@ -536,54 +542,6 @@
               <li>Data Analysis</li>
               <li>Edge AI</li>
             </ul>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Currently Exploring Section -->
-    <section id="exploring">
-      <div class="container">
-        <div class="section-header fade-in">
-          <span class="section-number">04.5</span>
-          <h2 class="section-title">What I'm Exploring</h2>
-        </div>
-
-        <div class="projects-grid fade-in">
-          <div class="project-card">
-            <div class="project-header">
-              <i data-lucide="brain-circuit" class="folder-icon"></i>
-            </div>
-            <h3 class="project-title">Agentic AI & LLMs</h3>
-            <p class="project-desc">
-              Exploring autonomous AI agent frameworks, prompt engineering, and
-              LLM API integration for building intelligent, self-directed
-              systems.
-            </p>
-          </div>
-
-          <div class="project-card">
-            <div class="project-header">
-              <i data-lucide="cpu" class="folder-icon"></i>
-            </div>
-            <h3 class="project-title">Edge AI & IoT</h3>
-            <p class="project-desc">
-              Combining my embedded systems background with on-device machine
-              learning — running AI models directly on hardware without cloud
-              dependency.
-            </p>
-          </div>
-
-          <div class="project-card">
-            <div class="project-header">
-              <i data-lucide="database" class="folder-icon"></i>
-            </div>
-            <h3 class="project-title">Data Analysis</h3>
-            <p class="project-desc">
-              Building foundational knowledge in data analysis pipelines,
-              Python-based workflows, and extracting actionable insights from
-              real-world data.
-            </p>
           </div>
         </div>
       </div>
