Fix: re-balance Skills section layout and improve section spacing

--- a/index.html
+++ b/index.html
@@ -534,14 +534,39 @@
             </ul>
           </div>
 
-          <div class="skill-category">
-            <h3>Currently Exploring</h3>
-            <ul class="skill-list">
-              <li>Agentic AI</li>
-              <li>LLM Systems</li>
-              <li>Data Analysis</li>
-              <li>Edge AI</li>
-            </ul>
+        </div>
+
+        <!-- Exploring Callout -->
+        <div class="exploring-callout fade-in">
+          <span class="row-label">Currently Exploring</span>
+          <div class="exploring-grid">
+            <div class="exploring-card">
+              <div class="exploring-icon-wrapper">
+                <i data-lucide="bot" class="exploring-icon"></i>
+              </div>
+              <div class="exploring-info">
+                <h4>Agentic AI & LLMs</h4>
+                <p>Autonomous AI agents, prompt engineering, and LLM orchestration.</p>
+              </div>
+            </div>
+            <div class="exploring-card">
+              <div class="exploring-icon-wrapper">
+                <i data-lucide="binary" class="exploring-icon"></i>
+              </div>
+              <div class="exploring-info">
+                <h4>Data Analysis</h4>
+                <p>Python-based workflows and extracting insights from real-world data.</p>
+              </div>
+            </div>
+            <div class="exploring-card">
+              <div class="exploring-icon-wrapper">
+                <i data-lucide="cpu" class="exploring-icon"></i>
+              </div>
+              <div class="exploring-info">
+                <h4>Edge AI & IoT</h4>
+                <p>On-device ML models running directly on embedded hardware.</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
