Refactor: clean up Contact section headers and remove redundancy

--- a/index.html
+++ b/index.html
@@ -572,24 +572,11 @@
       </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact">
+    <section id="contact" class="fade-in">
       <div class="container">
-        <div class="section-header fade-in" style="justify-content: center">
-          <span class="section-number">05.</span>
-          <h2 class="section-title" style="width: auto">What's Next?</h2>
-        </div>
-
-        <div class="contact-section fade-in">
-          <h1
-            style="
-              font-size: 3rem;
-              margin-bottom: 20px;
-              color: var(--text-primary);
-            "
-          >
-            Get In Touch
-          </h1>
+        <div class="contact-section">
+          <span class="contact-subtitle">05. What's Next?</span>
+          <h2 class="section-heading-main">Get In Touch</h2>
                 <p class="contact-text">
                     I'm currently open to new opportunities across ECE, AI, and product development. Whether you want to collaborate on a project, discuss ideas, or just say hi — my inbox is always open!
                 </p>
