SEO: Add canonical tag, robots meta, og:locale, og:site_name, and JSON-LD Person schema for Google indexing

--- a/index.html
+++ b/index.html
@@ -43,6 +43,35 @@
       content="https://aryanpanwar.in/Aryan_Panwar.webp"
     />
 
+    <!-- Canonical & Indexing -->
+    <link rel="canonical" href="https://aryanpanwar.in/" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph Extras -->
+    <meta property="og:locale" content="en_IN" />
+    <meta property="og:site_name" content="Aryan Panwar - Portfolio" />
+
+    <!-- JSON-LD Structured Data: Person -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Aryan Panwar",
+      "url": "https://aryanpanwar.in",
+      "image": "https://aryanpanwar.in/Aryan_Panwar.webp",
+      "jobTitle": "ECE Engineer & Product Builder",
+      "description": "Final-year ECE student, product builder, and AI explorer. Built FitWardrobe and Mithivoices. Based in Meerut, UP.",
+      "email": "aryanpanwar10005@gmail.com",
+      "telephone": "+917817060230",
+      "alumniOf": { "@type": "CollegeOrUniversity", "name": "MIET Meerut" },
+      "address": { "@type": "PostalAddress", "addressLocality": "Meerut", "addressRegion": "Uttar Pradesh", "addressCountry": "IN" },
+      "sameAs": [
+        "https://www.linkedin.com/in/aryan-panwar1",
+        "https://github.com/Aryanpanwar10005"
+      ]
+    }
+    </script>
+
     <title>Aryan Panwar - ECE Engineer | Product Builder | AI Explorer</title>
 
     <!-- Google Fonts Preconnect -->
