--- a/404.html
+++ b/404.html
@@ -6,15 +6,16 @@
     <title>404 - Page Not Found | Aryan Panwar</title>
     <style>
       :root {
-        --bg-primary: #0a192f;
-        --text-primary: #ccd6f6;
-        --accent: #64ffda;
-        --font-sans: 'Inter', -apple-system, system-ui, sans-serif;
+        --bg-dark: #0a0f1e;
+        --color-primary: #00d9ff;
+        --color-text-main: #e2e8f0;
+        --font-heading: 'Space Grotesk', sans-serif;
+        --font-body: 'Inter', sans-serif;
       }
       body {
-        background-color: var(--bg-primary);
-        color: var(--text-primary);
-        font-family: var(--font-sans);
+        background-color: var(--bg-dark);
+        color: var(--color-text-main);
+        font-family: var(--font-body);
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -22,32 +23,49 @@
         height: 100vh;
         margin: 0;
         text-align: center;
+        overflow: hidden;
+      }
+      .error-container {
+        padding: 2rem;
+        background: rgba(255, 255, 255, 0.03);
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        border-radius: 20px;
+        backdrop-filter: blur(10px);
       }
       h1 {
+        font-family: var(--font-heading);
         font-size: 8rem;
         margin: 0;
-        color: var(--accent);
+        color: var(--color-primary);
+        line-height: 1;
       }
       p {
-        font-size: 1.5rem;
+        font-size: 1.25rem;
         margin-bottom: 2rem;
+        opacity: 0.8;
       }
-      a {
-        color: var(--accent);
+      .btn {
+        display: inline-block;
+        color: var(--color-primary);
         text-decoration: none;
-        border: 1px solid var(--accent);
-        padding: 1rem 2rem;
-        border-radius: 4px;
+        border: 1px solid var(--color-primary);
+        padding: 0.75rem 1.5rem;
+        border-radius: 8px;
         transition: all 0.3s ease;
+        font-family: var(--font-heading);
+        font-weight: 500;
       }
-      a:hover {
-        background: rgba(100, 255, 218, 0.1);
+      .btn:hover {
+        background: rgba(0, 217, 255, 0.1);
+        transform: translateY(-2px);
       }
     </style>
   </head>
   <body>
-    <h1>404</h1>
-    <p>Oops! The page you're looking for doesn't exist.</p>
-    <a href="/">Back to Home</a>
+    <div class="error-container">
+      <h1>404</h1>
+      <p>Oops! The page you're looking for doesn't exist.</p>
+      <a href="/" class="btn">Back to Home</a>
+    </div>
   </body>
 </html>
