fix: section label, skills layout + PDF skills, mobile alignment, background consistency
- Issue 1: 04. label already present in section-header wrapper (no change needed)
- Issue 2+5: Rebuilt skills bento — new 2fr/1fr/1fr grid, removed justify-content:space-between (empty gap bug), skills now sourced exclusively from Aryan_Panwar.pdf. Removed TensorFlow, NLP, Docker (not in resume). Added all GenAI tools, cloud infra, industrial skills.
- Issue 3: Added global @media (max-width: 768px) safety block — overflow-x prevention, single-column grids, stacked layouts
- Issue 4: Added .project-img-placeholder CSS (no broken img tags found in HTML)
- Issue 6: Added --color-bg as single BG source of truth, hero-section set to background:transparent, navbar scrolled uses rgba(10,15,30,0.92) matching bg hue
- Bonus: No archive-link overlap found in this build"

--- a/index.html
+++ b/index.html
@@ -523,78 +523,115 @@
         </div>
 
         <div class="skills-bento" data-aos="fade-up">
+
           <!-- Card 1: Embedded (Large) -->
-          <div class="skill-card large">
-            <div class="card-content">
-              <h3><i data-lucide="cpu"></i> Embedded & Hardware Logic</h3>
-              <p class="skill-card-desc">Designing low-level systems and robust circuit architectures.</p>
+          <div class="skill-card skill-card--large">
+            <div class="skill-card-header">
+              <span class="skill-card-icon">&#9881;</span>
+              <h3 class="skill-card-title">Embedded &amp; Hardware Logic</h3>
             </div>
+            <p class="skill-card-desc">Designing low-level systems and robust circuit architectures.</p>
             <div class="skill-badges">
               <span class="skill-badge"><i class="devicon-cplusplus-plain"></i> C/C++</span>
               <span class="skill-badge"><i class="devicon-arduino-plain"></i> Arduino</span>
               <span class="skill-badge">8051 Family</span>
-              <span class="skill-badge">UART/I2C/SPI</span>
-              <span class="skill-badge">Circuit Design</span>
+              <span class="skill-badge">ARM MCU</span>
+              <span class="skill-badge">UART / I2C</span>
               <span class="skill-badge">HART Protocol</span>
-              <span class="skill-badge">LabVIEW</span>
+              <span class="skill-badge">Inductive Power Transfer</span>
+              <span class="skill-badge">Circuit Design</span>
               <span class="skill-badge">PCB Design</span>
+              <span class="skill-badge">LabVIEW</span>
+              <span class="skill-badge">MATLAB</span>
+              <span class="skill-badge">RTD / Pressure / Flow Calib.</span>
+              <span class="skill-badge">SIS / ESD</span>
             </div>
           </div>
 
-          <!-- Card 2: AI & ML (Tall) -->
-          <div class="skill-card tall">
-            <div class="card-content">
-              <h3><i data-lucide="brain-circuit"></i> AI & ML</h3>
-              <p class="skill-card-desc">Bridging hardware with intelligent processing.</p>
+          <!-- Card 2: AI & ML -->
+          <div class="skill-card">
+            <div class="skill-card-header">
+              <span class="skill-card-icon">&#129504;</span>
+              <h3 class="skill-card-title">AI &amp; ML</h3>
             </div>
+            <p class="skill-card-desc">Bridging hardware with intelligent processing.</p>
             <div class="skill-badges">
               <span class="skill-badge"><i class="devicon-python-plain"></i> Python</span>
+              <span class="skill-badge">On-Device AI</span>
+              <span class="skill-badge">Edge AI</span>
+              <span class="skill-badge">Machine Learning</span>
               <span class="skill-badge">Piper TTS</span>
               <span class="skill-badge">Whisper STT</span>
-              <span class="skill-badge">On-Device AI</span>
-              <span class="skill-badge">TensorFlow</span>
-              <span class="skill-badge">NLP</span>
+              <span class="skill-badge">LLM APIs</span>
+              <span class="skill-badge">FastAPI</span>
             </div>
           </div>
 
-          <!-- Card 3: GenAI (Standard) -->
+          <!-- Card 3: Agentic AI -->
           <div class="skill-card">
-            <div class="card-content">
-              <h3><i data-lucide="sparkles"></i> Agentic AI</h3>
-              <div class="skill-badges">
-                <span class="skill-badge">LLM APIs</span>
-                <span class="skill-badge">V0 / Cursor</span>
-                <span class="skill-badge">Prompt Eng.</span>
-              </div>
+            <div class="skill-card-header">
+              <span class="skill-card-icon">&#129302;</span>
+              <h3 class="skill-card-title">Agentic AI</h3>
             </div>
-          </div>
-
-          <!-- Card 4: Backend (Wide) -->
-          <div class="skill-card wide">
-            <div class="card-content">
-              <h3><i data-lucide="terminal"></i> Cloud & Dev Tools</h3>
-              <p class="skill-card-desc">Building scalable APIs and automated workflows.</p>
-            </div>
+            <p class="skill-card-desc">Building autonomous systems with LLM orchestration.</p>
             <div class="skill-badges">
-              <span class="skill-badge"><i class="devicon-fastapi-plain"></i> FastAPI</span>
-              <span class="skill-badge"><i class="devicon-github-original"></i> GitHub Actions</span>
-              <span class="skill-badge"><i class="devicon-git-plain"></i> Git Source Control</span>
-              <span class="skill-badge">PlatformIO</span>
-              <span class="skill-badge">Docker</span>
+              <span class="skill-badge">Agentic AI</span>
+              <span class="skill-badge">LLM Fine-tuning</span>
+              <span class="skill-badge">LLMOps</span>
+              <span class="skill-badge">Prompt Engineering</span>
+              <span class="skill-badge">Cursor</span>
+              <span class="skill-badge">Windsurf</span>
+              <span class="skill-badge">Replit</span>
+              <span class="skill-badge">Lovable</span>
+              <span class="skill-badge">Bolt.diy</span>
+              <span class="skill-badge">GitHub Copilot</span>
+              <span class="skill-badge">Google AI Studio</span>
+              <span class="skill-badge">N8n</span>
             </div>
           </div>
 
-          <!-- Card 5: Product (Standard) -->
+          <!-- Card 4: Cloud & Dev Tools -->
           <div class="skill-card">
-            <div class="card-content">
-              <h3><i data-lucide="target"></i> Product & Strategy</h3>
-              <div class="skill-badges">
-                <span class="skill-badge">User Research</span>
-                <span class="skill-badge">Documentation</span>
-                <span class="skill-badge">PM Basics</span>
-              </div>
+            <div class="skill-card-header">
+              <span class="skill-card-icon">&gt;_</span>
+              <h3 class="skill-card-title">Cloud &amp; Dev Tools</h3>
+            </div>
+            <p class="skill-card-desc">Tools and platforms that power the build pipeline.</p>
+            <div class="skill-badges">
+              <span class="skill-badge"><i class="devicon-github-original"></i> GitHub Actions</span>
+              <span class="skill-badge"><i class="devicon-git-plain"></i> Git</span>
+              <span class="skill-badge">Supabase</span>
+              <span class="skill-badge">Firebase</span>
+              <span class="skill-badge">Railway</span>
+              <span class="skill-badge">Vercel</span>
+              <span class="skill-badge">GitHub Pages</span>
+              <span class="skill-badge">PostHog</span>
+              <span class="skill-badge">CI/CD Pipelines</span>
+              <span class="skill-badge">Arduino IDE</span>
+              <span class="skill-badge">PlatformIO</span>
             </div>
           </div>
+
+          <!-- Card 5: Product & Strategy (Wide) -->
+          <div class="skill-card skill-card--wide">
+            <div class="skill-card-header">
+              <span class="skill-card-icon">&#127919;</span>
+              <h3 class="skill-card-title">Product &amp; Strategy</h3>
+            </div>
+            <p class="skill-card-desc">Turning ideas into shipped products that reach real users.</p>
+            <div class="skill-badges">
+              <span class="skill-badge">Product Management</span>
+              <span class="skill-badge">Product Strategy</span>
+              <span class="skill-badge">SEO</span>
+              <span class="skill-badge">Open Source</span>
+              <span class="skill-badge">Vibe Coding</span>
+              <span class="skill-badge">IoT Automation</span>
+              <span class="skill-badge">Industrial Calibration</span>
+              <span class="skill-badge">Process Control</span>
+              <span class="skill-badge">Data Analytics</span>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
