fix: 04. Technical Arsenal header now visible -- remove fade-in class + add safety CSS
Root cause: .section-header had fade-in class which sets opacity:0 + translateY(20px) as initial animation state. No JS scroll observer existed to complete the animation, permanently hiding the element.

Fix:
- Removed fade-in class from skills section-header div
- Added .fade-in CSS override (opacity:1 !important, transform:none !important) as global safety net
- Added .section-padding class to skills section for proper spacing
- Added .section-padding CSS (padding: 100px 0)"

--- a/index.html
+++ b/index.html
@@ -515,9 +515,9 @@
     </section>
 
     <!-- Skills Section -->
-    <section id="skills">
+    <section id="skills" class="section-padding">
       <div class="container">
-        <div class="section-header fade-in">
+        <div class="section-header">
           <span class="section-number">04.</span>
           <h2 class="section-title">Technical Arsenal</h2>
         </div>
