fix: graceful fallback for missing project images (FitWardrobe, Mithivoices)
fitwardrobe.png and mithivoices.png don't exist in assets/projects/.
Instead of showing a broken image icon, added onerror handlers that:
1. Hide the broken img (data-missing=true sets display:none)
2. Inject a .project-thumbnail--placeholder div with emoji icon

Added companion CSS in styles.css:
- .project-thumbnail--placeholder: gradient bg, centered flex layout
- ::after pseudo-element renders the data-icon emoji"

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
             <!-- FitWardrobe -->
             <div class="project-card" data-aos="fade-up" data-aos-delay="100">
               <div class="project-thumbnail">
-                <img src="assets/projects/fitwardrobe.png" alt="FitWardrobe App Preview" loading="lazy">
+                <img src="assets/projects/fitwardrobe.png" alt="FitWardrobe App Preview" loading="lazy" onerror="this.setAttribute('data-missing','true');this.insertAdjacentHTML('afterend','<div class=\'project-thumbnail--placeholder\' data-icon=\'👗\'></div>')">
                 <div class="thumbnail-overlay"></div>
               </div>
               <div class="project-body">
@@ -421,7 +421,7 @@
             <!-- Mithivoices -->
             <div class="project-card" data-aos="fade-up" data-aos-delay="200">
               <div class="project-thumbnail">
-                <img src="assets/projects/mithivoices.png" alt="Mithivoices Platform Preview" loading="lazy">
+                <img src="assets/projects/mithivoices.png" alt="Mithivoices Platform Preview" loading="lazy" onerror="this.setAttribute('data-missing','true');this.insertAdjacentHTML('afterend','<div class=\'project-thumbnail--placeholder\' data-icon=\'🎙️\'></div>')">
                 <div class="thumbnail-overlay"></div>
               </div>
               <div class="project-body">
