fix: add AOS JS (2.3.4) to match pinned CSS + harden localStorage try/catch
index.html:
- AOS JS script tag was entirely missing; added matching 2.3.4 version
  alongside the existing CSS link (both now reference identical version)
- Wrapped localStorage.getItem in try/catch in the inline IIFE so a
  SecurityError in restricted environments falls back cleanly to 'dark'
  and document.documentElement.setAttribute always executes"

--- a/index.html
+++ b/index.html
@@ -97,13 +97,15 @@
     <!-- Inline theme init: read localStorage before paint to prevent FOUC -->
     <script>
       (function() {
-        var t = localStorage.getItem('theme') || 'dark';
+        var t = 'dark';
+        try { t = localStorage.getItem('theme') || 'dark'; } catch (_) {}
         document.documentElement.setAttribute('data-theme', t);
       })();
     </script>
 
-    <!-- AOS CSS v2.3.4 -->
+    <!-- AOS Animation Library v2.3.4 (CSS + JS must match) -->
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css" />
+    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
     
     <!-- DevIcons v2.16.0 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.16.0/devicon.min.css" />
