feat: add project thumbnails for all 5 projects
- Recovered FitWardrobe og-image.jpg from local fitwardrobe-landing repo
- Generated premium AI mockups for Mithivoices, EV Charger, and Autonomous Robot
- Updated index.html with thumbnail wrappers and correct image paths
- Verified all images render correctly without broken icons or placeholders

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
             <!-- FitWardrobe -->
             <div class="project-card" data-aos="fade-up" data-aos-delay="100">
               <div class="project-thumbnail">
-                <img src="assets/projects/fitwardrobe.png" alt="FitWardrobe App Preview" loading="lazy" onerror="this.setAttribute('data-missing','true');this.insertAdjacentHTML('afterend','<div class=\'project-thumbnail--placeholder\' data-icon=\'👗\'></div>')">
+                <img src="assets/projects/fitwardrobe.jpg" alt="FitWardrobe App Preview" loading="lazy">
                 <div class="thumbnail-overlay"></div>
               </div>
               <div class="project-body">
@@ -423,7 +423,7 @@
             <!-- Mithivoices -->
             <div class="project-card" data-aos="fade-up" data-aos-delay="200">
               <div class="project-thumbnail">
-                <img src="assets/projects/mithivoices.png" alt="Mithivoices Platform Preview" loading="lazy" onerror="this.setAttribute('data-missing','true');this.insertAdjacentHTML('afterend','<div class=\'project-thumbnail--placeholder\' data-icon=\'🎙️\'></div>')">
+                <img src="assets/projects/mithivoices.png" alt="Mithivoices Platform Preview" loading="lazy">
                 <div class="thumbnail-overlay"></div>
               </div>
               <div class="project-body">
@@ -453,6 +453,10 @@
           <div class="projects-grid">
             <!-- EV Charging -->
             <div class="project-card" data-aos="fade-up" data-aos-delay="100">
+              <div class="project-thumbnail">
+                <img src="assets/projects/evcharger.png" alt="Wireless EV Charger Preview" loading="lazy">
+                <div class="thumbnail-overlay"></div>
+              </div>
               <div class="project-body">
                 <div class="project-header-top">
                   <i data-lucide="zap" class="project-icon"></i>
@@ -496,6 +500,10 @@
 
             <!-- Autonomous Robot -->
             <div class="project-card" data-aos="fade-up" data-aos-delay="300">
+              <div class="project-thumbnail">
+                <img src="assets/projects/robot.png" alt="Autonomous Robot Preview" loading="lazy">
+                <div class="thumbnail-overlay"></div>
+              </div>
               <div class="project-body">
                 <div class="project-header-top">
                   <i data-lucide="bot" class="project-icon"></i>
