fix: update resume links to match new file name "aryan panwar.pdf"
The local resume file was renamed from "Aryan_Panwar.pdf" to "aryan panwar.pdf", breaking the resume download buttons in the portfolio navigation.
Updated the buttons in `index.html` to link to "aryan%20panwar.pdf" so browsers correctly interpret the space and resolve the file without 404ing (especially important on case-sensitive servers like GitHub Pages).

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           >Contact</a
         >
         <a
-          href="Aryan_Panwar.pdf"
+          href="aryan%20panwar.pdf"
           target="_blank"
           rel="noopener noreferrer"
           class="btn btn-primary btn-resume-mobile"
@@ -166,7 +166,7 @@
               <i data-lucide="moon" class="moon-icon"></i>
             </button>
             <a
-              href="Aryan_Panwar.pdf"
+              href="aryan%20panwar.pdf"
               target="_blank"
               rel="noopener noreferrer"
               class="btn btn-primary btn-resume-nav"
