--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Final-year ECE student, product builder, and AI explorer. Built FitWardrobe (live Android AI app) and Mithivoices (open-source AI voice platform). Based in Meerut, UP."
+      content="Final-year ECE student, product builder, and AI explorer. Built FitWardrobe (AI app) and Mithivoices (AI voice platform). Based in Meerut, UP."
     />
     <meta
       name="keywords"
@@ -22,7 +22,7 @@
     />
     <meta
       property="og:description"
-      content="Final-year ECE student, product builder, and AI explorer. Built FitWardrobe (live Android AI app) and Mithivoices (open-source AI voice platform)."
+      content="Final-year ECE student, product builder, and AI explorer. Built FitWardrobe (AI app) and Mithivoices (AI voice platform). Based in Meerut, UP."
     />
     <meta
       property="og:image"
@@ -36,7 +36,7 @@
     />
     <meta
       name="twitter:description"
-      content="Final-year ECE student, product builder, and AI explorer. Built FitWardrobe (live Android AI app) and Mithivoices (open-source AI voice platform)."
+      content="Final-year ECE student, product builder, and AI explorer. Built FitWardrobe (AI app) and Mithivoices (AI voice platform). Based in Meerut, UP."
     />
     <meta
       property="twitter:image"
