fix: sync json-ld schema description with meta description
Also shortened the Google Rich Results "description" field from 171 chars to 146 characters to exactly match the new <meta name="description"> tag and prevent Bing/Google from pulling the longer snippet.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           "height": 912
         },
         "jobTitle": "ECE Engineer & Product Builder",
-        "description": "Final-year ECE student, product builder, and AI explorer. Built FitWardrobe (live Android AI app) and Mithivoices (open-source AI voice platform). Based in Meerut, UP.",
+        "description": "Final-year ECE student, product builder, and AI explorer. Built FitWardrobe (AI app) and Mithivoices (AI voice platform). Based in Meerut, UP.",
         "email": "aryanpanwar10005@gmail.com",
         "telephone": "+917817060230",
         "alumniOf": { "@type": "CollegeOrUniversity", "name": "MIET Meerut" },
