update: add maintainer role to SEO & GEO project

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                     <a href="https://github.com/Aryanpanwar10005/seo-geo-optimizer" target="_blank" rel="noopener noreferrer"><i data-lucide="github"></i></a>
                   </div>
                 </div>
-                <div class="role-badge">Creator</div>
+                <div class="role-badge">Creator & Maintainer</div>
                 <h3>SEO & GEO Optimizer Skill</h3>
                 <p class="project-desc">Universal SEO & GEO skill for AI IDEs like Cursor, Windsurf, Copilot, Bolt, etc. Optimizes for Google, Bing, Perplexity, and ChatGPT.</p>
                 <ul class="project-tech-list">
